@@ -40,6 +40,7 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
+import java.awt.event.KeyEvent;
 import java.util.ArrayList;
 import java.util.Map;
 import java.util.TreeMap;
@@ -57,10 +58,13 @@ import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JList;
 import javax.swing.JPanel;
+import javax.swing.KeyStroke;
 import javax.swing.JSeparator;
+import javax.swing.JComponent;
 import javax.swing.ButtonGroup;
 import javax.swing.JRadioButton;
 import javax.swing.SwingConstants;
+import javax.swing.AbstractAction;
 import javax.swing.plaf.basic.BasicComboBoxRenderer;
 
 import org.lwjgl.LWJGLException;
@@ -467,32 +471,68 @@ public class ResolutionDialog extends JFrame {
 	 * Builds the Go and Exit Buttons and attaches the actions to them
 	 */
 	private void buildButtons() {
+
+        // The OK Button
 		runButton 	= new JButton("Go!");
-		
 		runButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
-				exitCode = ResolutionDialog.DIALOG_BUTTON_GO;
-				setSelectedValues();
-				setVisible(false);
-				dispose();
-				synchronized(ResolutionDialog.this) {
-					ResolutionDialog.this.notify();
-				}
+                dialogGo();
 			}
 		});
+
+        // Key mapping for the OK button
+        KeyStroke enterStroke = KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0, false);
+        rootPane.getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW).put(enterStroke, "ENTER");
+        rootPane.getActionMap().put("ENTER", new AbstractAction() {
+			public void actionPerformed(ActionEvent e) {
+                dialogGo();
+			}
+        });
 		
+        // The Exit button
 		exitButton 	= new JButton("Exit");
 		exitButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
-				exitCode = ResolutionDialog.DIALOG_BUTTON_EXIT;
-				setVisible(false);
-				dispose();
-				synchronized(ResolutionDialog.this) {
-					ResolutionDialog.this.notify();
-				}
+                dialogExit();
 			}
 		});
+
+        // Key mapping for the Exit button
+        KeyStroke escapeStroke = KeyStroke.getKeyStroke(KeyEvent.VK_ESCAPE, 0, false);
+        rootPane.getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW).put(escapeStroke, "ESCAPE");
+        rootPane.getActionMap().put("ESCAPE", new AbstractAction() {
+			public void actionPerformed(ActionEvent e) {
+                dialogExit();
+			}
+        });
 	}
+
+    /**
+     * Actions to perform if the "Go" button is hit, or otherwise triggered.
+     */
+    private void dialogGo()
+    {
+        exitCode = ResolutionDialog.DIALOG_BUTTON_GO;
+        setSelectedValues();
+        setVisible(false);
+        dispose();
+        synchronized(ResolutionDialog.this) {
+            ResolutionDialog.this.notify();
+        }
+    }
+
+    /**
+     * Actions to perform if the "Exit" button is hit, or otherwise triggered.
+     */
+    private void dialogExit()
+    {
+        exitCode = ResolutionDialog.DIALOG_BUTTON_EXIT;
+        setVisible(false);
+        dispose();
+        synchronized(ResolutionDialog.this) {
+            ResolutionDialog.this.notify();
+        }
+    }
 	
 	/***
 	 * Builds the different lists and fills them with their respective information
